--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Ici on clear et on reassigne notre layout, on ajoute android et tools-->
-<!-- mettre en place un wrapper(android:orientation) -->
+    <!-- Ici on clear et on reassigne notre layout, on ajoute android et tools-->
+    <!-- mettre en place un wrapper(android:orientation) -->
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
 
-    android:orientation="vertical"
+android:orientation="vertical"
     >
 
-    <!-- Ici on ajoute notre TextView -->
-    <!-- Adapter hauteur au contenu du text view-->
-    <TextView
-        android:layout_width="match_parent"
+<!-- Ici on ajoute notre TextView -->
+<!-- Adapter hauteur au contenu du text view-->
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Bienvenue dans mon premier projet Android/KOTLIN"
+    android:layout_marginBottom="10sp"
+    style="@style/titre"
+    />
+
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Sous titre"
+    style="@style/SousTitre"
+    />
+
+<!--Nouveau composant -->
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:src="@mipmap/ic_launcher_round"
+    />
+
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:text="Un jolie button"
+    android:backgroundTint="@color/cardview_dark_background"
+    />
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:background="@color/cardview_dark_background"
+    >
+    <Button
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Bienvenue dans mon premier projet Android/KOTLIN"
-        android:layout_marginBottom="10sp"
+        android:layout_weight="1"
+        android:text="bt1"
+        />
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:text="bt2"
+        android:padding="3dp"
+        style="@style/btn"
+        />
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="bt2"
         />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sous titre "
-        />
+</LinearLayout>
+
+<Button
+    android:layout_width=""
+    android:layout_height=""
+    />
+
+<Button
+        android:layout_width=""
+        android:layout_height=""
+    />
+
+<Button
+        android:layout_width=""
+        android:layout_height=""
+    />
 
 </LinearLayout>
