--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@ android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="bt1"
+        android:text="bouton1"
         />
     <Button
         android:layout_width="0dp"
@@ -67,24 +67,11 @@ android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="bt2"
+        android:text="bouton 2"
         />
 
 </LinearLayout>
 
-<Button
-    android:layout_width=""
-    android:layout_height=""
-    />
 
-<Button
-        android:layout_width=""
-        android:layout_height=""
-    />
-
-<Button
-        android:layout_width=""
-        android:layout_height=""
-    />
 
 </LinearLayout>
