--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@ android:orientation="vertical"
 <!-- Ici on ajoute notre TextView -->
 <!-- Adapter hauteur au contenu du text view-->
 <TextView
+    android:id="@+id/titreActivity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="Bienvenue dans mon premier projet Android/KOTLIN"
@@ -21,7 +22,9 @@ android:orientation="vertical"
     style="@style/titre"
     />
 
+<!-- id = identifiant pour la vue-->
 <TextView
+    android:id="@+id/sousTitre"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="Sous titre"
@@ -29,49 +32,59 @@ android:orientation="vertical"
     />
 
 <!--Nouveau composant -->
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:src="@mipmap/ic_launcher_round"
-    />
+    <ImageView
+        android:id="@+id/imgHome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/images"
+        />
 
-<Button
+    <Button
+    android:id="@+id/btn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:text="Un jolie button"
     android:backgroundTint="@color/cardview_dark_background"
-    />
+        />
 
-<LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/cardview_dark_background"
+        >
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="bouton1"
+            />
+        <Button
+            android:id="@+id/btn2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="bt2"
+            android:padding="3dp"
+            style="@style/btn"
+            />
+        <Button
+            android:id="@+id/btn3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="bouton 2"
+            />
+
+    </LinearLayout>
+
+<TextView
+    android:id="@+id/reponse"
+    android:text=""
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@color/cardview_dark_background"
-    >
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="bouton1"
-        />
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:text="bt2"
-        android:padding="3dp"
-        style="@style/btn"
-        />
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="bouton 2"
-        />
-
-</LinearLayout>
-
-
+    />
 
 </LinearLayout>
